--- a/src/features/main/Main.css
+++ b/src/features/main/Main.css
@@ -1,5 +1,63 @@
-.player {
+.main {
+    width: 100%;
+    min-height: 100vh;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.leaderboard {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.player-row {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid black;
+}
+
+.player-row button {
+    height: 50px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.player-info {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+}
+
+.player-info h4 {
+    width: 100%;
+}
+
+.go-button {
+    height: fit-content;
+    width: auto;
+}
+
+.actions {
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.action-buttons {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    height: fit-content;
+}
+
+.action-buttons button {
+    width: 50%;
 }
