--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,64 @@
+:root {
+  --main-red: #ff1e1e;
+  --light-green: #bfdbae;
+  --dark-green: #8fbc72;
+  --main-white: #ffffff;
+  --main-beige: #d7baaa;
+  --main-blue: #3b4cca;
+  --main-blue2: #3047f1;
+  --main-yellow: #ffde00;
+  --main-orange: #ff9100;
+}
+
+@font-face {
+  font-family: 'Monopoly';
+  src: url('./fonts/monopoly/MonopolyRegular.ttf');
+}
+
+@font-face {
+  font-family: 'Monopoly Bold';
+  src: url('./fonts/monopoly/MonopolyBold.ttf');
+}
+
 .App {
+  font-family: 'Monopoly';
+  letter-spacing: 3px;
   text-align: center;
+  min-height: 100vh;
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color:var(--light-green);
+  font-size: 2rem;
+}
+
+button {
+  font-family: 'Monopoly';
+  letter-spacing: 3px;
+  margin: 5px;
+  padding: 5px;
+  min-width: 100px;
+  width: fit-content;
+  height: 50px;
+  background-color: var(--main-blue2);
+  border: none;
+  color: var(--main-white);
+  font-size: 2rem;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: var(--main-white);
+  color: var(--main-blue2);
+  border: 1px solid var(--main-blue2);
+}
+
+input {
+  font-size: 2rem;
+  width: 90%;
+  padding: 1rem;
+  border-radius: 3px;
+  border: 1px solid grey;
 }
