--- a/src/features/GetPlayerNames/GetPlayerNames.css
+++ b/src/features/GetPlayerNames/GetPlayerNames.css
@@ -1,8 +1,11 @@
 .get-player-names {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    gap: 5rem;
 }
 
 .get-player-names-form {
@@ -10,10 +13,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
 }
 
 .get-player-names-list {
     width: 80%;
     display: flex;
     justify-content: space-between;
+}
+
+.get-player-names select {
+    font-size: 2rem;
+    width: 90%;
+    padding: 1rem;
+    border-radius: 3px;
+    border: 1px solid grey;
+}
+
+.add-player-button {
+    margin: 5px;
+    padding: 5px;
+    min-width: 100px;
+    width: fit-content;
+    height: 50px;
+    border-radius: 3px;
+    background-color: var(--main-blue2);
+    border: none;
+    color: var(--main-white);
+    font-size: 2rem;
 }
