--- a/src/features/main/Main.css
+++ b/src/features/main/Main.css
@@ -4,21 +4,47 @@
     height: fit-content;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 50px;
 }
 
 .leaderboard {
-    width: 100%;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    align-items: center;
+    gap: 10px;    
+}
+
+.leaderboard h2 {
+    width: 100%;
+    padding: 1rem;
+    background-color: var(--main-red);
+    color: var(--main-white);
+    border: 1px solid black;
 }
 
 .player-row {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    border: 1px solid black;
+    background-color: var(--main-white);
+    color: black;
+}
+
+.player-row h3 {
+    text-decoration: underline;
+    height: 100px;
+    margin: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--main-orange);
+    /* color: white; */
     border: 1px solid black;
 }
 
@@ -33,15 +59,25 @@
     height: auto;
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    gap: 1rem;
+    padding: 0 1rem;
 }
 
 .player-info h4 {
-    width: 100%;
+    width: 50%;
+    background-color: var(--dark-green);
+    padding: 3px;
 }
 
 .go-button {
     height: fit-content;
     width: auto;
+    background-color: var(--main-red);
+    color: black;
+    font-family: 'Monopoly Bold';
+    font-weight: bold;
+    font-size: 2.5rem;
 }
 
 .actions {
