--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,9 @@ code {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: transparent;
+}
+
+html {
+  font-size: 10px;
 }
