--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,13 @@
   min-height: 100vh;
   height: fit-content;
   width: 100%;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color:var(--light-green);
   font-size: 2rem;
+  padding-bottom: 3rem;
 }
 
 button {
