--- a/src/features/Trade/Trade.css
+++ b/src/features/Trade/Trade.css
@@ -3,3 +3,20 @@
     flex-direction: column;
     align-items: center;
 }
+
+.player-divs {
+    display: flex;
+}
+
+.p-one-div, .p-two-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.p-header {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
