updated readme, added free parking functionality, began implenting modals for action buttons

--- a/src/features/GetPlayerNames/GetPlayerNames.css
+++ b/src/features/GetPlayerNames/GetPlayerNames.css
@@ -42,3 +42,10 @@
     color: var(--main-white);
     font-size: 2rem;
 }
+
+.add-player-button:hover {
+    cursor: pointer;
+  background-color: var(--main-white);
+  color: var(--main-blue2);
+  border: 1px solid var(--main-blue2);
+}
