--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ html {
 #root {
   min-width: 100vw;
   width: fit-content;
+  max-width: 100vw;
   min-height: 100vh;
   height: fit-content;
   background-color: var(--light-green);
