--- a/src/App.css
+++ b/src/App.css
@@ -57,9 +57,20 @@ button:hover {
 }
 
 input {
+  text-align: center;
   font-size: 2rem;
   width: 90%;
   padding: 1rem;
   border-radius: 3px;
   border: 1px solid grey;
+}
+
+.render-section {
+  width: 100%;
+  height: fit-content;
+  min-height: 60vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
